# langchain-heroku

./: .env.example  LICENSE  Makefile  README.md  TEST_HARNESS_README.md  TEST_HARNESS_SUMMARY.md  example_usage.py  mypy.ini  pyproject.toml  run_tests.sh  test_config.yaml  test_harness.py  test_requirements.txt
.github/workflows/: ci.yaml
docs/: chat.ipynb  chat_completions_integration.md  embeddings_integration.md  langgraph_101_verification_summary.md
examples/: embeddings_example.py  langgraph_101_demo.py
langchain-heroku/: README.md  pyproject.toml
langchain-heroku/docs/: chat.ipynb
langchain-heroku/langchain_heroku/: chat_models.py
langchain-heroku/tests/integration_tests/: test_chat_models.py
langchain-heroku/tests/unit_tests/: test_chat_models.py
langchain_heroku/: __init__.py  chat_models.py  config.py  embeddings.py  exceptions.py  http_client.py  tool_converter.py
scripts/: test_langgraph_101_heroku.py
tests/: test_chat_models.py  test_compile.py
tests/integration_tests/: test_chat_models_integration.py  test_config_integration.py  test_cross_component_integration.py  test_embeddings_integration.py  test_langgraph_101_integration.py  test_production_endpoint.py
tests/unit_tests/: test_chat_models.py  test_embeddings.py
